--- a/src/html/layout/error.html
+++ b/src/html/layout/error.html
@@ -1,4 +1,4 @@
-<div id="{{ id }}" class="error">
-    <h1>{{ title }}</h1>
-    <span>{{ error }}</span>
+<div id="<%- errID %>" class="error">
+    <h1><%- title %></h1>
+    <span><%- error %></span>
 </div>
