--- a/src/html/layout/markup.html
+++ b/src/html/layout/markup.html
@@ -1,4 +1,4 @@
-<div id="' + api.ids.droppableWidget + '" class="droppableQueue medium empty">
+<div id="<%- gPlayer %>" class="droppableQueue medium empty">
     <div id="'+ api.ids.playerBox +'" class="player-box">
         <div id="'+ api.ids.player +'">
             <div id="'+ api.ids.nowStreaming +'">
