--- a/src/html/layout/player/player.html
+++ b/src/html/layout/player/player.html
@@ -1,77 +1,77 @@
-<div id="'+ api.ids.guiPlayerID +'" class="'+ api.namespace +'-gui">
-    <ul class="'+ api.namespace +'-skin">
-        <li class="'+ api.namespace +'-controls">
+<div id="'+ api.ids.guiPlayerID +'" class="<%- namespace %>-gui">
+    <ul class="<%- namespace %>-skin">
+        <li class="<%- namespace %>-controls">
             <ul>
-                <li class="'+ api.namespace +'-icons '+ api.namespace +'-previous"><em><em>previous</em></em></li>
-                <li class="'+ api.namespace +'-icons '+ api.namespace +'-play"><em><em>play</em></em></li>
-                <li class="'+ api.namespace +'-icons '+ api.namespace +'-pause"><em><em>pause</em></em></li>
-                <li class="'+ api.namespace +'-icons '+ api.namespace +'-next"><em><em>next</em></em></li>
+                <li class="<%- namespace %>-icons <%- namespace %>-previous"><em><em>previous</em></em></li>
+                <li class="<%- namespace %>-icons <%- namespace %>-play"><em><em>play</em></em></li>
+                <li class="<%- namespace %>-icons <%- namespace %>-pause"><em><em>pause</em></em></li>
+                <li class="<%- namespace %>-icons <%- namespace %>-next"><em><em>next</em></em></li>
              </ul>
         </li>
         
-        <li class="'+ api.namespace +'-thumbnail"><figure><img src="about:blank" alt="" /></figure></li>
+        <li class="<%- namespace %>-thumbnail"><figure><img src="" alt="" /></figure></li>
         
-        <li class="'+ api.namespace +'-info-minimal '+ api.namespace +'-calc-ignore">
-            <em class="'+ api.namespace +'-song-name">Song Name</em>
-            <strong class="'+ api.namespace +'-song-artist">Artist</strong>
+        <li class="<%- namespace %>-info-minimal <%- namespace %>-calc-ignore">
+            <em class="<%- namespace %>-song-name">Song Name</em>
+            <strong class="<%- namespace %>-song-artist">Artist</strong>
         </li>
         
-        <li class="'+ api.namespace +'-info '+ api.namespace +'-calc-ignore">
-            <span class="'+ api.namespace +'-song-info"><strong class="'+ api.namespace +'-song-artist">Artist</strong> - <em class="'+ api.namespace +'-song-name">Song Name</em></span>
-            <div class="'+ api.namespace +'-song-meta">
-                <span class="'+ api.namespace +'-current-time">&nbsp;</span>
-                <div class="'+ api.namespace +'-progress-bar">
-                    <div class="'+ api.namespace +'-seek-bar"><div class="'+ api.namespace +'-play-bar"></div></div>
+        <li class="<%- namespace %>-info <%- namespace %>-calc-ignore">
+            <span class="<%- namespace %>-song-info"><strong class="<%- namespace %>-song-artist">Artist</strong> - <em class="<%- namespace %>-song-name">Song Name</em></span>
+            <div class="<%- namespace %>-song-meta">
+                <span class="<%- namespace %>-current-time">&nbsp;</span>
+                <div class="<%- namespace %>-progress-bar">
+                    <div class="<%- namespace %>-seek-bar"><div class="<%- namespace %>-play-bar"></div></div>
                 </div>
-                <span class="'+ api.namespace +'-duration">&nbsp;</span>
+                <span class="<%- namespace %>-duration">&nbsp;</span>
             </div>
         </li>
         
-        <li class="'+ api.namespace +'-interactive '+ api.namespace +'-scrabber '+ api.namespace +'-calc-ignore">
-            <div class="'+ api.namespace +'-scrubber">
-                <div class="'+ api.namespace +'-scrubber-active">
-                    <span class="'+ api.namespace +'-scrubber-bg"><img class="'+ api.namespace +'-scrabber" src="about:blank" alt=""/></span>
-                    <span class="'+ api.namespace +'-scrubber-progress"><img class="'+ api.namespace +'-scrabber" src="about:blank" alt=""/></span>
+        <li class="<%- namespace %>-interactive <%- namespace %>-scrabber <%- namespace %>-calc-ignore">
+            <div class="<%- namespace %>-scrubber">
+                <div class="<%- namespace %>-scrubber-active">
+                    <span class="<%- namespace %>-scrubber-bg"><img class="<%- namespace %>-scrabber" src="" alt=""/></span>
+                    <span class="<%- namespace %>-scrubber-progress"><img class="<%- namespace %>-scrabber" src="" alt=""/></span>
                 </div>
-                <div class="'+ api.namespace +'-scrubber-reflect">
-                    <span class="'+ api.namespace +'-scrubber-bg"><img class="'+ api.namespace +'-scrabber" src="about:blank" alt=""/></span>
-                    <span class="'+ api.namespace +'-scrubber-progress"><img class="'+ api.namespace +'-scrabber" src="about:blank" alt=""/></span>
+                <div class="<%- namespace %>-scrubber-reflect">
+                    <span class="<%- namespace %>-scrubber-bg"><img class="<%- namespace %>-scrabber" src="" alt=""/></span>
+                    <span class="<%- namespace %>-scrubber-progress"><img class="<%- namespace %>-scrabber" src="" alt=""/></span>
                 </div>
             </div>
             
-            <div class="'+ api.namespace +'-spectrum">
-                <div class="'+ api.namespace +'-spectrum-active">
-                    <span class="'+ api.namespace +'-spectrum-bg"><canvas class="'+ api.namespace +'-scrabber spectrum-scrub-bg"></canvas></span>
-                    <span class="'+ api.namespace +'-spectrum-progress"><canvas class="'+ api.namespace +'-scrabber spectrum-scrub-prog"></canvas></span>
+            <div class="<%- namespace %>-spectrum">
+                <div class="<%- namespace %>-spectrum-active">
+                    <span class="<%- namespace %>-spectrum-bg"><canvas class="<%- namespace %>-scrabber spectrum-scrub-bg"></canvas></span>
+                    <span class="<%- namespace %>-spectrum-progress"><canvas class="<%- namespace %>-scrabber spectrum-scrub-prog"></canvas></span>
                 </div>
-                <div class="'+ api.namespace +'-spectrum-reflect">
-                    <span class="'+ api.namespace +'-spectrum-bg"><canvas class="'+ api.namespace +'-scrabber spectrum-scrub-bg-reflect"></canvas></span>
-                    <span class="'+ api.namespace +'-spectrum-progress"><canvas class="'+ api.namespace +'-scrabber spectrum-scrub-prog-reflect"></canvas></span>
+                <div class="<%- namespace %>-spectrum-reflect">
+                    <span class="<%- namespace %>-spectrum-bg"><canvas class="<%- namespace %>-scrabber spectrum-scrub-bg-reflect"></canvas></span>
+                    <span class="<%- namespace %>-spectrum-progress"><canvas class="<%- namespace %>-scrabber spectrum-scrub-prog-reflect"></canvas></span>
                 </div>
             </div>
             
-            <div class="'+ api.namespace +'-scrubber-hover">
+            <div class="<%- namespace %>-scrubber-hover">
             </div>
             
-            <span class="'+ api.namespace +'-current-time">&nbsp;</span>
-            <span class="'+ api.namespace +'-duration">&nbsp;</span>
+            <span class="<%- namespace %>-current-time">&nbsp;</span>
+            <span class="<%- namespace %>-duration">&nbsp;</span>
         </li>
         
-        <li class="'+ api.namespace +'-volume">
+        <li class="<%- namespace %>-volume">
             <ul>
-                <li class="'+ api.namespace +'-icons '+ api.namespace +'-mute"><em><em>mute</em></em></li>
-                <li class="'+ api.namespace +'-icons '+ api.namespace +'-unmute"><em><em>unmute</em></em></li>
-                <li class="'+ api.namespace +'-volume-progress">
-                    <div class="'+ api.namespace +'-volume-progress-bg"><div class="'+ api.namespace +'-volume-bar-value"></div></div>
+                <li class="<%- namespace %>-icons <%- namespace %>-mute"><em><em>mute</em></em></li>
+                <li class="<%- namespace %>-icons <%- namespace %>-unmute"><em><em>unmute</em></em></li>
+                <li class="<%- namespace %>-volume-progress">
+                    <div class="<%- namespace %>-volume-progress-bg"><div class="<%- namespace %>-volume-bar-value"></div></div>
                 </li>
-                <li class="'+ api.namespace +'-icons '+ api.namespace +'-volume-max"><em><em>volume max</em></em></li>
+                <li class="<%- namespace %>-icons <%- namespace %>-volume-max"><em><em>volume max</em></em></li>
             </ul>
             
-            <div class="'+ api.namespace +'-options">
+            <div class="<%- namespace %>-options">
                 <ul>
-                    <li class="'+ api.namespace +'-icons '+ api.namespace +'-shuffle"><em><em>shuffle</em></em></li>
-                    <li class="'+ api.namespace +'-icons '+ api.namespace +'-repeat"><em><em>repeat</em></em></li>
-                    <li class="'+ api.namespace +'-icons '+ api.namespace +'-crossfade"><em><em>crossfade</em></em></li>
+                    <li class="<%- namespace %>-icons <%- namespace %>-shuffle"><em><em>shuffle</em></em></li>
+                    <li class="<%- namespace %>-icons <%- namespace %>-repeat"><em><em>repeat</em></em></li>
+                    <li class="<%- namespace %>-icons <%- namespace %>-crossfade"><em><em>crossfade</em></em></li>
                 </ul>
             </div>
             
