--- a/src/skin/gray.grooveshark/css.tmp/style.tmp.css
+++ b/src/skin/gray.grooveshark/css.tmp/style.tmp.css
@@ -83,3 +83,127 @@ div.gplayer div.playlist ol.queue li.drop-indicator { background-color: red; flo
 
 /* uncomment the following lines if using bootstrap.css lib */
 div.gplayer.medium div.playlist ol.queue li.item-wrapper { width: 84px; height: 122px; }
+
+
+
+
+/*****************/
+
+body { background: gray; }
+.clear { clear: both; }
+
+.g-gui { margin-top: 2px; }
+.g-gui .g-icons em { background: transparent url('../images/groovy-player-controls.png') no-repeat 100px 100px; }
+.g-gui ul { list-style: none; margin: 0; padding: 0; }
+.g-gui ul li { float: left; position: relative; }
+.g-gui ul li em { display: block; }
+.g-gui ul li em em { display: none; }
+
+.g-gui li.g-controls { margin-left: 3px; }
+.g-gui li.g-controls ul li { margin: 0 8px; }
+.g-gui li.g-controls ul li.g-previous em { width: 12px; height: 15px; background-position: 0 -5px; margin-top: 13px; }
+.g-gui li.g-controls ul li.g-previous:hover em { background-position: -30px -5px; }
+
+.g-gui li.g-controls ul li.g-play { }
+.g-gui li.g-controls ul li.g-play em { width: 18px; height: 25px; background-position: -62px 0; margin-top: 8px; }
+.g-gui li.g-controls ul li.g-play:hover em { background-position: -92px 0; }
+
+.g-gui li.g-controls ul li.g-pause { display: none; }
+.g-gui li.g-controls ul li.g-pause em { width: 18px; height: 25px; background-position: -130px 0; margin-top: 8px; }
+.g-gui li.g-controls ul li.g-pause:hover em { background-position: -160px 0; }
+
+.g-gui li.g-controls ul li.g-next em { width: 12px; height: 15px; background-position: -198px -5px; margin-top: 13px; }
+.g-gui li.g-controls ul li.g-next:hover em { background-position: -228px -5px; }
+
+.g-gui li.g-thumbnail { margin: 0 15px 0 5px; }
+.g-gui li.g-thumbnail > figure { background: transparent url('/resource/images/ajax-loader.gif') no-repeat center center; width: 40px; height: 40px; margin:0;}
+.g-gui li.g-thumbnail > figure > img { width: 100%; height: 100%; }
+
+.g-gui li.g-info-minimal { margin: 2px 15px 0 0; width: 130px; text-overflow: ellipsis; overflow: hidden; line-height: 1em; display: none; }
+.g-gui li.g-info-minimal > strong,
+.g-gui li.g-info-minimal > em { display: block; font-size: 11px; font-style: normal; font-weight: normal; color: white; text-decoration: none; white-space: nowrap; text-transform: uppercase; text-overflow: ellipsis; overflow: hidden; }
+
+.g-gui li.g-info { position: relative; margin-top: 2px; width: 300px; display: none; }
+.g-gui li.g-info span.g-song-info { font-size: 12px; color: white; }
+.g-gui li.g-info span.g-song-info > strong,
+.g-gui li.g-info span.g-song-info > strong a,
+.g-gui li.g-info span.g-song-info > em { font-style: normal; font-weight: normal; display: inline; color: white; text-decoration: none; }
+.g-gui li.g-info div.g-song-meta { font-size: 10px; color: white; margin: 1px 0; }
+.g-gui li.g-info div.g-song-meta span.g-current-time { float: left; }
+.g-gui li.g-info div.g-song-meta div.g-progress-bar { float: left; width: 240px; height: 9px; border: 1px solid black; border-radius: 3px; background-color: black; cursor: pointer; margin: 2px 10px 0 10px; }
+.g-gui li.g-info div.g-song-meta div.g-progress-bar .g-seek-bar { height: 100%; background-color: #383838; border-radius: 3px;  background-color: #383838; background-image: -moz-linear-gradient(top, #3b3b3b, #333); background-image: -ms-linear-gradient(top, #3b3b3b, #333); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3b3b3b), to(#333)); background-image: -webkit-linear-gradient(top, #3b3b3b, #333); background-image: linear-gradient(top, #3b3b3b, #333); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.Gradient(startColorstr='#ff3b3b3b', endColorstr='#ff333333', GradientType=0); }
+.g-gui li.g-info div.g-song-meta div.g-progress-bar .g-play-bar { height: 100%; border-radius: 3px; background-color: #f88800; background-image: -moz-linear-gradient(top, #f99a00, #f66c00); background-image: -ms-linear-gradient(top, #f99a00, #f66c00); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f99a00), to(#f66c00)); background-image: -webkit-linear-gradient(top, #f99a00, #f66c00); background-image: linear-gradient(top, #f99a00, #f66c00); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.Gradient(startColorstr='#fff99a00', endColorstr='#fff66c00', GradientType=0); }
+.g-gui li.g-info div.g-song-meta span.g-duration { float: left; }
+
+.g-gui .g-scrabber { width: 420px; }
+.g-gui li.g-interactive { height: 25px; position: relative; display: none; }
+.g-gui li.g-interactive div.g-scrubber { display: none; }
+.g-gui li.g-interactive div.g-spectrum { display: none; }
+.g-gui li.g-interactive div.g-scrubber div.g-scrubber-active { }
+
+.g-gui li.g-interactive div.g-scrubber > div,
+.g-gui li.g-interactive div.g-spectrum > div { position: absolute; left: 0; top:0; bottom: 0; right:0; height: 100%; }
+.g-gui li.g-interactive div.g-scrubber > div span,
+.g-gui li.g-interactive div.g-spectrum > div span { position: absolute; left: 0; top:0; bottom: 0; right:0; }
+.g-gui li.g-interactive div.g-spectrum div.g-spectrum-active { }
+.g-gui li.g-interactive div.g-scrubber div.g-scrubber-reflect,
+.g-gui li.g-interactive div.g-spectrum div.g-spectrum-reflect { opacity: 0.5; height: 15px; top: auto; bottom:-15px; -webkit-transform: scaleY(-1); transform: scaleY(-1); }
+.g-gui li.g-interactive div.g-scrubber img,
+.g-gui li.g-interactive div.g-spectrum canvas { height: 100%; position: absolute; left:0; top:0;}
+
+.g-gui li.g-interactive div.g-scrubber div.g-scrubber-active span.g-scrubber-progress,
+.g-gui li.g-interactive div.g-scrubber div.g-scrubber-reflect span.g-scrubber-progress,
+.g-gui li.g-interactive div.g-spectrum div.g-spectrum-active span.g-spectrum-progress,
+.g-gui li.g-interactive div.g-spectrum div.g-spectrum-reflect span.g-spectrum-progress { width: 0; overflow: hidden; transition: width .1s; }
+
+.g-gui li.g-interactive > div.g-scrubber-hover { display: none; position: absolute; left: 0; top: 0; background-color: yellow; width: 1px; height: 25px; }
+.g-gui li.g-interactive:hover > div.g-scrubber-hover { display: block; }
+.g-gui li.g-interactive > span.g-current-time { position: absolute; left: 0; bottom: 0; background: rgba(0, 0, 0, 0.7); color: #eee; padding: 2px 7px; font-size: 10px; transition: width .3s; }
+.g-gui li.g-interactive > span.g-duration { position: absolute; right: 0; bottom: 0; background: rgba(255, 255, 255, 0.7); color: rgba(0, 0, 0, 0.5); padding: 2px 7px; font-size: 10px; }
+
+.g-gui li.g-volume { margin: 0 3px 0 7px; width: 57px; }
+.g-gui li.g-volume > ul { width: 100%; position: absolute; left: 0; top: 20px;  }
+.g-gui li.g-volume > ul li { margin-left: 5px; }
+.g-gui li.g-volume > ul li em { width: 18px; height: 15px; }
+.g-gui li.g-volume > ul li.g-mute em { background-position: -60px -36px; }
+.g-gui li.g-volume > ul li.g-mute:hover em { background-position: -90px -36px; }
+
+.g-gui li.g-volume > ul li.g-unmute { display: none; }
+.g-gui li.g-volume > ul li.g-unmute em { background-position: -120px -36px; }
+.g-gui li.g-volume > ul li.g-unmute:hover em { background-position: -150px -36px; }
+
+.g-gui li.g-volume > ul li.g-volume-max { display: none; }
+.g-gui li.g-volume > ul li.g-volume-max em { background-position: 0 -36px; }
+.g-gui li.g-volume > ul li.g-volume-max:hover em { background-position: -30px -36px; }
+
+.g-gui li.g-volume > ul li.g-volume-progress { width: 50%; }
+.g-gui li.g-volume > ul li.g-volume-progress div.g-volume-progress-bg { margin: 2px 0 0; height: 9px; width: 99%; border: 1px solid black; background-color: #383838; border-radius: 3px; background-color: #383838; background-image: -moz-linear-gradient(top, #3b3b3b, #333); background-image: -ms-linear-gradient(top, #3b3b3b, #333); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3b3b3b), to(#333)); background-image: -webkit-linear-gradient(top, #3b3b3b, #333); background-image: linear-gradient(top, #3b3b3b, #333); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.Gradient(startColorstr='#ff3b3b3b', endColorstr='#ff333333', GradientType=0); }
+.g-gui li.g-volume > ul li.g-volume-progress div.g-volume-progress-bg div.g-volume-bar-value { height: 100%; border-radius: 3px; background-color: #f88800; background-image: -moz-linear-gradient(top, #f99a00, #f66c00); background-image: -ms-linear-gradient(top, #f99a00, #f66c00); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f99a00), to(#f66c00)); background-image: -webkit-linear-gradient(top, #f99a00, #f66c00); background-image: linear-gradient(top, #f99a00, #f66c00); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.Gradient(startColorstr='#fff99a00', endColorstr='#fff66c00', GradientType=0); }
+
+.g-gui li.g-volume div.g-options { position: absolute; left: 5px; top: 0; height: 15px; }
+.g-gui li.g-volume div.g-options ul li { margin-left: 3px; }
+.g-gui li.g-volume div.g-options ul li:first-child { margin-left: 0; }
+.g-gui li.g-volume div.g-options ul li em { width: 15px; height: 13px; }
+.g-gui li.g-volume div.g-options ul li.g-shuffle em { background-position: -152px -60px; }
+.g-gui li.g-volume div.g-options ul li.g-shuffle.active em { background-position: -184px -60px; }
+.g-gui li.g-volume div.g-options ul li.g-shuffle:active em { background-position: -168px -60px; }
+.g-gui li.g-volume div.g-options ul li.g-repeat em { background-position: -76px -60px; }
+.g-gui li.g-volume div.g-options ul li.g-repeat.active em { background-position: -108px -60px; }
+.g-gui li.g-volume div.g-options ul li.g-repeat:active em { background-position: -91px -60px; }
+.g-gui li.g-volume div.g-options ul li.g-crossfade em { background-position: 0 -60px; }
+.g-gui li.g-volume div.g-options ul li.g-crossfade.active em { background-position: -32px -60px; }
+.g-gui li.g-volume div.g-options ul li.g-crossfade:active em { background-position: -16px -60px; }
+
+/* large */
+.g-gui.g-size-lg li.g-interactive,
+.g-gui.g-size-md li.g-interactive { display: block; }
+.g-gui.g-size-lg li.g-info-minimal,
+.g-gui.g-size-md li.g-info-minimal { display: block; }
+
+/* small */
+.g-gui.g-size-sm li.g-info,
+.g-gui.g-size-xs li.g-info { display: block; }
+
+/* xxs */
+.g-gui.g-size-xxs li.g-info-minimal { display: block; }
+.g-gui.g-size-xxs li.g-volume { display: none; }
