--- a/src/html/layout/player/player.html
+++ b/src/html/layout/player/player.html
@@ -1,4 +1,4 @@
-<div id="'+ api.ids.guiPlayerID +'" class="<%- namespace %>-gui">
+<div class="<%- namespace %>-gui">
     <ul class="<%- namespace %>-skin">
         <li class="<%- namespace %>-controls">
             <ul>
