--- a/src/html/layout/player/player.html
+++ b/src/html/layout/player/player.html
@@ -9,7 +9,7 @@
              </ul>
         </li>
         
-        <li class="<%- namespace %>-thumbnail"><figure><img src="" alt="" /></figure></li>
+        <li class="<%- namespace %>-thumbnail"><figure><img src="/none" alt="" /></figure></li>
         
         <li class="<%- namespace %>-info-minimal <%- namespace %>-calc-ignore">
             <em class="<%- namespace %>-song-name">Song Name</em>
@@ -30,12 +30,12 @@
         <li class="<%- namespace %>-interactive <%- namespace %>-scrabber <%- namespace %>-calc-ignore">
             <div class="<%- namespace %>-scrubber">
                 <div class="<%- namespace %>-scrubber-active">
-                    <span class="<%- namespace %>-scrubber-bg"><img class="<%- namespace %>-scrabber" src="" alt=""/></span>
-                    <span class="<%- namespace %>-scrubber-progress"><img class="<%- namespace %>-scrabber" src="" alt=""/></span>
+                    <span class="<%- namespace %>-scrubber-bg"><img class="<%- namespace %>-scrabber" src="/none" alt=""/></span>
+                    <span class="<%- namespace %>-scrubber-progress"><img class="<%- namespace %>-scrabber" src="/none" alt=""/></span>
                 </div>
                 <div class="<%- namespace %>-scrubber-reflect">
-                    <span class="<%- namespace %>-scrubber-bg"><img class="<%- namespace %>-scrabber" src="" alt=""/></span>
-                    <span class="<%- namespace %>-scrubber-progress"><img class="<%- namespace %>-scrabber" src="" alt=""/></span>
+                    <span class="<%- namespace %>-scrubber-bg"><img class="<%- namespace %>-scrabber" src="/none" alt=""/></span>
+                    <span class="<%- namespace %>-scrubber-progress"><img class="<%- namespace %>-scrabber" src="/none" alt=""/></span>
                 </div>
             </div>
             
