--- a/src/skin/gray.grooveshark/css.tmp/style.tmp.css
+++ b/src/skin/gray.grooveshark/css.tmp/style.tmp.css
@@ -2,7 +2,7 @@
 .hide { display: none !important; }
 
 .player-widget-drag { border-radius: 4px; background-color: #f5f5f5; border: 1px solid #ddd; display: inline-block; width: auto !important; height: auto !important; font-size: 12px; padding: 4px 13px; cursor: -webkit-grabbing; }
-.player-widget-drag div.widget-drag-status { position: absolute; left: -10px; top: -10px; background-color: green; width: 18px; height: 18px; background: transparent url( '/resources/images/icons-drag.png') no-repeat left top; }
+.player-widget-drag div.widget-drag-status { position: absolute; left: -10px; top: -10px; background-color: green; width: 18px; height: 18px; background: transparent url( '../images/icons-drag.png') no-repeat left top; }
 .player-widget-drag div.widget-drag-status.invalid { background-position: left bottom;}
 .player-widget-drag div.drag-label em { display: block; font-style: normal; }
 
@@ -31,7 +31,7 @@ div.gplayer div.playlist ol.queue { height: 100%; width: 100%; }
 div.gplayer div.playlist ol.queue li.item-wrapper { float: left; background-color: black; border-top: 1px solid black; padding: 6px; margin-left: 4px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; border-radius: 4px; position: relative; cursor: -webkit-grab; }
 div.gplayer div.playlist ol.queue li.item-wrapper:active { cursor: -webkit-grabbing; }
 div.gplayer div.playlist ol.queue li.item-wrapper .widget-item { }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action { position: absolute; z-index: 5; display: none; background: transparent url('/resources/images/icons-pause-play-close.png') no-repeat 100px 100px; cursor: pointer; }
+div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action { position: absolute; z-index: 5; display: none; background: transparent url('../images/icons-pause-play-close.png') no-repeat 100px 100px; cursor: pointer; }
 div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action.remove { right: -7px; top: -7px; width: 18px; height: 18px; background-position: -88px 0; }
 div.gplayer div.playlist ol.queue li.item-wrapper:hover .widget-item div.widget-action.remove { display: block; }
 
@@ -115,7 +115,7 @@ div.gplayer.medium div.playlist ol.queue li.item-wrapper { width: 84px; height: 
 .groovy-gui li.groovy-controls ul li.groovy-next:hover em { background-position: -228px -5px; }
 
 .groovy-gui li.groovy-thumbnail { margin: 0 15px 0 5px; }
-.groovy-gui li.groovy-thumbnail > figure { background: transparent url('/resource/images/ajax-loader.gif') no-repeat center center; width: 40px; height: 40px; margin:0;}
+.groovy-gui li.groovy-thumbnail > figure { background: transparent url('../images/ajax-loader.gif') no-repeat center center; width: 40px; height: 40px; margin:0;}
 .groovy-gui li.groovy-thumbnail > figure > img { width: 100%; height: 100%; }
 
 .groovy-gui li.groovy-info-minimal { margin: 2px 15px 0 0; width: 130px; text-overflow: ellipsis; overflow: hidden; line-height: 1em; display: none; }
