--- a/src/skin/gray.grooveshark/css.tmp/style.tmp.css
+++ b/src/skin/gray.grooveshark/css.tmp/style.tmp.css
@@ -1,3 +1,18 @@
+[draggable] {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+[draggable] * {
+  -moz-user-drag: none;
+  -khtml-user-drag: none;
+  -webkit-user-drag: none;
+  user-drag: none;
+}
+
+*, *:before, *:after { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+
 .clear { clear: both; }
 .hide { display: none !important; }
 
