--- a/src/skin/gray.grooveshark/css.tmp/style.tmp.css
+++ b/src/skin/gray.grooveshark/css.tmp/style.tmp.css
@@ -1,16 +1,3 @@
-[draggable] {
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  user-select: none;
-}
-[draggable] * {
-  -moz-user-drag: none;
-  -khtml-user-drag: none;
-  -webkit-user-drag: none;
-  user-drag: none;
-}
-
 *, *:before, *:after { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 .clear { clear: both; }
@@ -20,6 +7,23 @@
 .player-widget-drag div.widget-drag-status { position: absolute; left: -10px; top: -10px; background-color: green; width: 18px; height: 18px; background: transparent url( '../images/icons-drag.png') no-repeat left top; }
 .player-widget-drag div.widget-drag-status.invalid { background-position: left bottom;}
 .player-widget-drag div.drag-label em { display: block; font-style: normal; }
+
+/** prevent select on drag **/
+div.gplayer {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+div.gplayer * {
+  -moz-user-drag: none;
+  -khtml-user-drag: none;
+  -webkit-user-drag: none;
+  user-drag: none;
+}
 
 div.gplayer { display: block; position: fixed; left: 0; right: 0; bottom: 0; background: #000; border-top: solid 1px #000; -webkit-transition: .3s; -moz-transition: .3s; -ms-transition: .3s; transition: .3s; -webkit-transform: translateZ(0); -moz-transform: translateZ(0); -ms-transform: translateZ(0); transform: translateZ(0); z-index: 10; }
 div.gplayer .player { position: absolute; height: 59px; top: 0; left: 0; right: 0; border-top: solid 1px #3d3d3d; cursor: pointer; background-color: #2c2c2c; background-image: -moz-linear-gradient(top, #333, #222); background-image: -ms-linear-gradient(top, #333, #222); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333), to(#222)); background-image: -webkit-linear-gradient(top, #333, #222); background-image: linear-gradient(top, #333, #222); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.Gradient(startColorstr='#ff333333', endColorstr='#ff222222', GradientType=0); }
@@ -41,6 +45,8 @@ div.gplayer .player-modes ul li { float: left; margin-left: -1px; }
 div.gplayer .player-modes ul li.active button { opacity: 0.4; cursor: default; }
 div.gplayer .player-modes ul li button { opacity: 1.0; color: #ddd; border: solid 1px #111; cursor: pointer; text-shadow: 0 1px 0 rgba(0,0,0,0.8); background-color: #454545; background-image: -moz-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: -ms-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4b4b4b), to(#3b3b3b)); background-image: -webkit-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: linear-gradient(top, #4b4b4b, #3b3b3b); border-radius: 0 0 30px 30px; box-shadow: 0 1px 1px 0 rgba(0,0,0,0.05),inset 0 1px 0 0 rgba(255,255,255,0.2); }
 
+div.gplayer div.playlist ol,
+div.gplayer div.playlist ul { list-style-type: none; margin: 0; padding: 0; }
 div.gplayer div.playlist { position: absolute; top: 65px; left: 0; right:0; list-style: none; margin:0; padding:0; }
 div.gplayer div.playlist ol.queue { height: 100%; width: 100%; }
 div.gplayer div.playlist ol.queue li.item-wrapper { float: left; background-color: black; border-top: 1px solid black; padding: 6px; margin-left: 4px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; border-radius: 4px; position: relative; cursor: -webkit-grab; }
@@ -221,3 +227,22 @@ div.gplayer.medium div.playlist ol.queue li.item-wrapper { width: 84px; height: 
 /* xxs */
 .groovy-gui.groovy-size-xxs li.groovy-info-minimal { display: block; }
 .groovy-gui.groovy-size-xxs li.groovy-volume { display: none; }
+
+
+.mCustomScrollBox { overflow: initial !important; }
+.mCustomScrollBox .mCSB_scrollTools { width: 88%; margin: 0 6%; height: 10px; position: absolute; left: 0; bottom: 9px; right: 0; }
+.mCustomScrollBox .mCSB_scrollTools .mCSB_draggerContainer { height: 100%; }
+.mCSB_horizontal .mCSB_container { height: 100%; }
+.mCSB_horizontal .mCSB_scrollTools .mCSB_dragger { height: 100%; cursor: pointer; -moz-border-radius: 10px; border-radius: 10px; background: #777777;background: -moz-linear-gradient(top,  #777777 0%, #474747 100%);background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#777777), color-stop(100%,#474747));background: -webkit-linear-gradient(top,  #777777 0%,#474747 100%);background: -o-linear-gradient(top,  #777777 0%,#474747 100%);background: -ms-linear-gradient(top,  #777777 0%,#474747 100%);background: linear-gradient(to bottom,  #777777 0%,#474747 100%);filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#777777', endColorstr='#474747',GradientType=0 );}
+.mCSB_horizontal .mCSB_scrollTools .mCSB_draggerRail { width: 100%; height: 100%; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; background: #3b3b3b;background: -moz-linear-gradient(top,  #3b3b3b 0%, #333333 100%);background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3b3b3b), color-stop(100%,#333333));background: -webkit-linear-gradient(top,  #3b3b3b 0%,#333333 100%);background: -o-linear-gradient(top,  #3b3b3b 0%,#333333 100%);background: -ms-linear-gradient(top,  #3b3b3b 0%,#333333 100%);background: linear-gradient(to bottom,  #3b3b3b 0%,#333333 100%);filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3b3b3b', endColorstr='#333333',GradientType=0 ); }
+
+.jjmenu { z-index: 25; overflow: visible; background-color: white; border: 1px solid #bbb; padding: 5px; border-radius: 4px; margin-top: 1px; font-size: 11px; }
+#jjmenu_main:after { left: 25px; bottom: -8px; position: absolute; content: ''; border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 8px solid white;}
+.jjmenu .jj_menu_item { min-width: 150px; max-width: 250px; color: #444; cursor: pointer; padding: 6px 7px; border-radius: 3px; position: relative; }
+.jjmenu .jj_menu_item.jj_menu_item_hover,
+.jjmenu .jj_menu_item_parent { background-color: #f77f00; color: white; }
+.jjmenu .jj_menu_item.jj_menu_item_more .more {width: 7px; height: 12px; display:block; position: absolute; right: 8px; top: 8px; background: transparent url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAQCAYAAAB3AH1ZAAAAYUlEQVR42u3UsQ0AIQwEwS8MiTrdDRKFGQeXL7KDJ7ClTbmJ+Nz91xrwHsDMVjQKj65oVACuchAdQBiQhugAwoA0RAeQFGBHswDY0UQADGM0jAAYxmCYATDMabh/wgbcdgBvsgpLw0Eq/QAAAABJRU5ErkJggg==') no-repeat -4px center; }
+.jjmenu .jj_menu_item_parent .more,
+.jjmenu .jj_menu_item.jj_menu_item_more.jj_menu_item_hover .more { background-position: -20px center !important; }
+.jjmenu .jj_menu_item.jj_menu_divider { margin-bottom: 7px; }
+.jjmenu .jj_menu_item.jj_menu_divider:after { left: 0; bottom: -7px; position: absolute; content: ''; border-bottom: 1px solid #bbb; display:block; height: 1px; width:100%; margin-bottom: 3px; } 
