renamed playlist to queue-container as a playlist should be something else..

--- a/src/html/layout/gplayer.html
+++ b/src/html/layout/gplayer.html
@@ -6,6 +6,6 @@
     <div class="<%- player_background %>"></div>
 </div>
 
-<div class="<%- playlist %>">
+<div class="<%- queue_container %>">
     <ol class="<%- queue %>"></ol>
 </div>
