--- a/src/skin/gray.grooveshark/css.tmp/style.tmp.css
+++ b/src/skin/gray.grooveshark/css.tmp/style.tmp.css
@@ -45,67 +45,67 @@ div.gplayer .player-modes ul li { float: left; margin-left: -1px; }
 div.gplayer .player-modes ul li.active button { opacity: 0.4; cursor: default; }
 div.gplayer .player-modes ul li button { opacity: 1.0; color: #ddd; border: solid 1px #111; cursor: pointer; text-shadow: 0 1px 0 rgba(0,0,0,0.8); background-color: #454545; background-image: -moz-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: -ms-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4b4b4b), to(#3b3b3b)); background-image: -webkit-linear-gradient(top, #4b4b4b, #3b3b3b); background-image: linear-gradient(top, #4b4b4b, #3b3b3b); border-radius: 0 0 30px 30px; box-shadow: 0 1px 1px 0 rgba(0,0,0,0.05),inset 0 1px 0 0 rgba(255,255,255,0.2); }
 
-div.gplayer div.playlist ol,
-div.gplayer div.playlist ul { list-style-type: none; margin: 0; padding: 0; }
-div.gplayer div.playlist { position: absolute; top: 65px; left: 0; right:0; list-style: none; margin:0; padding:0; }
-div.gplayer div.playlist ol.queue { height: 100%; width: 100%; }
-div.gplayer div.playlist ol.queue li.item-wrapper { float: left; background-color: black; border-top: 1px solid black; padding: 6px; margin-left: 4px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; border-radius: 4px; position: relative; cursor: -webkit-grab; }
-div.gplayer div.playlist ol.queue li.item-wrapper:active { cursor: -webkit-grabbing; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item { }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action { position: absolute; z-index: 5; display: none; background: transparent url('../images/icons-pause-play-close.png') no-repeat 100px 100px; cursor: pointer; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action.remove { right: -7px; top: -7px; width: 18px; height: 18px; background-position: -88px 0; }
-div.gplayer div.playlist ol.queue li.item-wrapper:hover .widget-item div.widget-action.remove { display: block; }
+div.gplayer div.queue-container ol,
+div.gplayer div.queue-container ul { list-style-type: none; margin: 0; padding: 0; }
+div.gplayer div.queue-container { position: absolute; top: 65px; left: 0; right:0; list-style: none; margin:0; padding:0; }
+div.gplayer div.queue-container ol.queue { height: 100%; width: 100%; }
+div.gplayer div.queue-container ol.queue li.item-wrapper { float: left; background-color: black; border-top: 1px solid black; padding: 6px; margin-left: 4px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; border-radius: 4px; position: relative; cursor: -webkit-grab; }
+div.gplayer div.queue-container ol.queue li.item-wrapper:active { cursor: -webkit-grabbing; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item { }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action { position: absolute; z-index: 5; display: none; background: transparent url('../images/icons-pause-play-close.png') no-repeat 100px 100px; cursor: pointer; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action.remove { right: -7px; top: -7px; width: 18px; height: 18px; background-position: -88px 0; }
+div.gplayer div.queue-container ol.queue li.item-wrapper:hover .widget-item div.widget-action.remove { display: block; }
 
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action.play { }
-div.gplayer div.playlist ol.queue li.item-wrapper:hover .widget-item div.widget-action.play { display: block; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action.play { }
+div.gplayer div.queue-container ol.queue li.item-wrapper:hover .widget-item div.widget-action.play { display: block; }
 
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action.pause { }
-div.gplayer div.playlist ol.queue li.item-wrapper:hover .widget-item div.widget-action.pause { display: block; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action.pause { }
+div.gplayer div.queue-container ol.queue li.item-wrapper:hover .widget-item div.widget-action.pause { display: block; }
 
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action:hover { opacity: 1; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item div.widget-action:active { opacity: 0.6; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action:hover { opacity: 1; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action:active { opacity: 0.6; }
 
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label {}
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > em { display: block; background-color: black; padding: 1px; border-bottom: 1px solid black; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > em figure { margin: 0; border: 2px solid white; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > em figure img { display: block; margin: 0; width: 100%; height: 100%; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > h4 { margin: 2px 0 0 0; font-size: 12px; line-height: 16px; font-weight: bold; display: block; color: white; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: center; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > h4:hover { text-decoration: underline; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > strong { margin-top: 3px; color: white; font-weight: normal; font-size: 10px; text-align: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
-div.gplayer div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > strong:hover { text-decoration: underline; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label {}
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > em { display: block; background-color: black; padding: 1px; border-bottom: 1px solid black; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > em figure { margin: 0; border: 2px solid white; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > em figure img { display: block; margin: 0; width: 100%; height: 100%; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > h4 { margin: 2px 0 0 0; font-size: 12px; line-height: 16px; font-weight: bold; display: block; color: white; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: center; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > h4:hover { text-decoration: underline; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > strong { margin-top: 3px; color: white; font-weight: normal; font-size: 10px; text-align: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: block; }
+div.gplayer div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > strong:hover { text-decoration: underline; }
 
 /* skin: orange */
-div.gplayer.orange div.playlist ol.queue li.item-wrapper { background-color: #2d2d2d; border-top-color: #363636; }
-div.gplayer.orange div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > em { border-bottom-color: #3d3d3d; }
-div.gplayer.orange div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > strong { color: #666; }
-div.gplayer.orange div.playlist ol.queue li.item-wrapper.active { border-top-color: #FAAD00; background: #f89200; background: -moz-linear-gradient(top,  #f89200 0%, #f66c00 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f89200), color-stop(100%,#f66c00)); background: -webkit-linear-gradient(top,  #f89200 0%,#f66c00 100%); background: -o-linear-gradient(top,  #f89200 0%,#f66c00 100%); background: -ms-linear-gradient(top,  #f89200 0%,#f66c00 100%); background: linear-gradient(to bottom,  #f89200 0%,#f66c00 100%); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f89200', endColorstr='#f66c00',GradientType=0); }
-div.gplayer.orange div.playlist ol.queue li.item-wrapper.active .widget-item .widget-item-label > em { background-color: #C65F00; border-bottom-color: #F9A100; }
-div.gplayer.orange div.playlist ol.queue li.item-wrapper.active .widget-item .widget-item-label > strong{ color: white; }
+div.gplayer.orange div.queue-container ol.queue li.item-wrapper { background-color: #2d2d2d; border-top-color: #363636; }
+div.gplayer.orange div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > em { border-bottom-color: #3d3d3d; }
+div.gplayer.orange div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > strong { color: #666; }
+div.gplayer.orange div.queue-container ol.queue li.item-wrapper.active { border-top-color: #FAAD00; background: #f89200; background: -moz-linear-gradient(top,  #f89200 0%, #f66c00 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f89200), color-stop(100%,#f66c00)); background: -webkit-linear-gradient(top,  #f89200 0%,#f66c00 100%); background: -o-linear-gradient(top,  #f89200 0%,#f66c00 100%); background: -ms-linear-gradient(top,  #f89200 0%,#f66c00 100%); background: linear-gradient(to bottom,  #f89200 0%,#f66c00 100%); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f89200', endColorstr='#f66c00',GradientType=0); }
+div.gplayer.orange div.queue-container ol.queue li.item-wrapper.active .widget-item .widget-item-label > em { background-color: #C65F00; border-bottom-color: #F9A100; }
+div.gplayer.orange div.queue-container ol.queue li.item-wrapper.active .widget-item .widget-item-label > strong{ color: white; }
 
 div.gplayer.small { height: 128px; }
-div.gplayer.small div.playlist { height: 66px; }
-div.gplayer.small div.playlist ol.queue li.item-wrapper { width: 140px; height: 42px; padding: 3px; }
-div.gplayer.small div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > em { float: left; margin-right: 5px; }
-div.gplayer.small div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > em figure { width: 34px; height: 34px; }
-div.gplayer.small div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > h4 { float: left; text-align: left; width: 90px; }
-div.gplayer.small div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > strong { float: left; text-align: left; width: 90px; }
-div.gplayer.small div.playlist ol.queue li.item-wrapper .widget-item div.widget-action.play { width: 28px; height: 28px; left: 7px; top: 7px; background-position: -7px -45px; }
-div.gplayer.small div.playlist ol.queue li.item-wrapper .widget-item div.widget-action.pause { width: 28px; height: 28px; left: 7px; top: 7px; background-position: -49px -45px; }
+div.gplayer.small div.queue-container { height: 66px; }
+div.gplayer.small div.queue-container ol.queue li.item-wrapper { width: 140px; height: 42px; padding: 3px; }
+div.gplayer.small div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > em { float: left; margin-right: 5px; }
+div.gplayer.small div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > em figure { width: 34px; height: 34px; }
+div.gplayer.small div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > h4 { float: left; text-align: left; width: 90px; }
+div.gplayer.small div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > strong { float: left; text-align: left; width: 90px; }
+div.gplayer.small div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action.play { width: 28px; height: 28px; left: 7px; top: 7px; background-position: -7px -45px; }
+div.gplayer.small div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action.pause { width: 28px; height: 28px; left: 7px; top: 7px; background-position: -49px -45px; }
 
 div.gplayer.medium { height: 205px; }
-div.gplayer.medium div.playlist { height: 145px; }
-div.gplayer.medium div.playlist ol.queue li.item-wrapper { width: 74px; height: 115px; }
+div.gplayer.medium div.queue-container { height: 145px; }
+div.gplayer.medium div.queue-container ol.queue li.item-wrapper { width: 74px; height: 115px; }
 
-div.gplayer.medium div.playlist ol.queue li.item-wrapper .widget-item .widget-item-label > em figure { width: 70px; height: 70px; }
-div.gplayer.medium div.playlist ol.queue li.item-wrapper .widget-item div.widget-action.play { width: 42px; height: 42px; left: 21px; top: 21px; background-position: 0 0; }
-div.gplayer.medium div.playlist ol.queue li.item-wrapper .widget-item div.widget-action.pause { width: 42px; height: 42px; left: 21px; top: 21px; background-position: -42px 0; }
+div.gplayer.medium div.queue-container ol.queue li.item-wrapper .widget-item .widget-item-label > em figure { width: 70px; height: 70px; }
+div.gplayer.medium div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action.play { width: 42px; height: 42px; left: 21px; top: 21px; background-position: 0 0; }
+div.gplayer.medium div.queue-container ol.queue li.item-wrapper .widget-item div.widget-action.pause { width: 42px; height: 42px; left: 21px; top: 21px; background-position: -42px 0; }
 
 div.gplayer.collapse { height: 59px; }
 
-div.gplayer div.playlist ol.queue li.drop-indicator { background-color: red; float: left; width: 2px; height: 100%; float: left; margin-left: 5px; -moz-transition:all 0.2s ease-in; -webkit-transition:all 0.2s ease-in; }
+div.gplayer div.queue-container ol.queue li.drop-indicator { background-color: red; float: left; width: 2px; height: 100%; float: left; margin-left: 5px; -moz-transition:all 0.2s ease-in; -webkit-transition:all 0.2s ease-in; }
 
 /* uncomment the following lines if using bootstrap.css lib */
-div.gplayer.medium div.playlist ol.queue li.item-wrapper { width: 84px; height: 122px; }
+div.gplayer.medium div.queue-container ol.queue li.item-wrapper { width: 84px; height: 122px; }
 
 li.sortable-dragging {
   opacity: .25;
