when queue empty, hide the player and show diffrent layer instead

--- a/src/html/layout/player/player.html
+++ b/src/html/layout/player/player.html
@@ -1,3 +1,7 @@
+<div class="<%- namespace %>-empty-notice">
+    <hr />
+</div>
+
 <div class="<%- namespace %>-gui">
     <ul class="<%- namespace %>-skin">
         <li class="<%- namespace %>-controls">
