split all player elements to components

--- a/src/html/layout/player/player.html
+++ b/src/html/layout/player/player.html
@@ -3,34 +3,6 @@
 </div>
 
 <div class="<%- namespace %>-gui">
-    <ul class="<%- namespace %>-skin">
-        <li class="<%- namespace %>-controls">
-            <ul>
-                <li class="<%- namespace %>-icons <%- namespace %>-previous"><em><em>previous</em></em></li>
-                <li class="<%- namespace %>-icons <%- namespace %>-play"><em><em>play</em></em></li>
-                <li class="<%- namespace %>-icons <%- namespace %>-pause"><em><em>pause</em></em></li>
-                <li class="<%- namespace %>-icons <%- namespace %>-next"><em><em>next</em></em></li>
-             </ul>
-        </li>
-        
-        <li class="<%- namespace %>-thumbnail"><figure><img src="/none" alt="" /></figure></li>
-        
-        <li class="<%- namespace %>-info-minimal <%- namespace %>-calc-ignore">
-            <em class="<%- namespace %>-song-name">Song Name</em>
-            <strong class="<%- namespace %>-song-artist">Artist</strong>
-        </li>
-        
-        <li class="<%- namespace %>-info <%- namespace %>-calc-ignore">
-            <span class="<%- namespace %>-song-info"><strong class="<%- namespace %>-song-artist">Artist</strong> - <em class="<%- namespace %>-song-name">Song Name</em></span>
-            <div class="<%- namespace %>-song-meta">
-                <span class="<%- namespace %>-current-time">&nbsp;</span>
-                <div class="<%- namespace %>-progress-bar">
-                    <div class="<%- namespace %>-seek-bar"><div class="<%- namespace %>-play-bar"></div></div>
-                </div>
-                <span class="<%- namespace %>-duration">&nbsp;</span>
-            </div>
-        </li>
-    </ul>
-    
+    <ul class="<%- namespace %>-skin"></ul>
     <div class="clear"></div>
 </div>
